--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "CloudComputing",
+  "name": "hello-cloud-run",
   "version": "1.0.0",
-  "description": "Cloud Computing - Terraform",
+  "description": "Simple hello world sample in Node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AshwinParmar/CloudComputing.git"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AshwinParmar/CloudComputing/issues"
-  },
-  "homepage": "https://github.com/AshwinParmar/CloudComputing#readme"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
