--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI Deploy GitHub to AWS Lambda
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ main-1 ]
   pull_request:
-    branches: [ main ]
+    branches: [ main-1 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
